# super-dl

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  super_dl.spec
.claude/commands/: create-pr.md
.github/workflows/: build.yml
installer/: super-dl.iss
scripts/: generate_icon.py
super_dl/: __init__.py  __main__.py  app.py
super_dl/core/: config.py  downloader.py  formats.py  i18n.py  logging_setup.py  paths.py  updater.py
super_dl/resources/: icon.icns
super_dl/resources/i18n/: super_dl_en.ts  super_dl_es.qm  super_dl_es.ts  super_dl_fr.qm  super_dl_fr.ts
super_dl/ui/: about_dialog.py  main_window.py  update_worker.py
tests/: test_config.py  test_downloader.py  test_formats.py  test_i18n.py  test_paths.py  test_updater.py
