[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super-dl"
version = "0.1.0"
description = "Lightweight cross-platform GUI for yt-dlp"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sergio Adam" }]
dependencies = [
    "PySide6>=6.6",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.gui-scripts]
super-dl = "super_dl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["super_dl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
